fixed patient 2 and 3 sidenav styles

--- a/src/javascript/templates/patient2/patient2view12.hbs
+++ b/src/javascript/templates/patient2/patient2view12.hbs
@@ -9,26 +9,26 @@
           <li>Michele Johnson</li>
         </ul>
         <div class="row next-steps p-2-steps">
-        <ul class="background-gray2">
+          <ul class="background-gray2">
             <li><span></span></li>
             <li class="border-bottom purple-text"><span><img src="images/icon_biopsy_off.png" alt="" /></span>Biopsy</li>
           </ul>
           <ul class="background-gray2">
             <li><span></span></li>
-            <li class="border-bottom purple-text"><img src="images/icon_ertest_off.png" alt="" /></span> Er Test</li>
+            <li class="border-bottom purple-text"><img src="images/icon_ertest_off.png" alt="" /></span> ER Test</li>
           </ul>
 
-          <ul>
+          <ul class="background-gray2">
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
+            <li class="border-bottom purple-text"><img src="images/icon_her2test_off.png" alt="" /></span> HER2 FISH Test</li>
           </ul>
-          <ul>
+          <ul class="background-gray2">
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_biopsy_over.png" alt="" /></span> OncoType DX Test</li>
+            <li class="border-bottom purple-text"><img src="images/icon_biopsy_off.png" alt="" /></span> OncoType DX Test</li>
           </ul>
-          <ul>
+          <ul class="background-purple">
             <li><span></span></li>
-            <li class=""><img src="images/icon_treatment_over.png" alt="" /></span> Treatment</li>
+            <li class=""><img src="images/icon_treatment_on.png" alt="" /></span> Treatment</li>
           </ul>
         </div>
       </nav>
