--- a/src/javascript/templates/patient3/patient3View13.hbs
+++ b/src/javascript/templates/patient3/patient3View13.hbs
@@ -9,22 +9,22 @@
           <li>Brittany Featherston</li>
         </ul>
         <div class="row next-steps p-2-steps">
-        <ul class="background-green">
+          <ul class="background-gray2">
             <li><span></span></li>
-            <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
+            <li class="border-bottom green-text"><span><img src="images/p3icon_biopsy_off.png" alt="" /></span>Biopsy</li>
           </ul>
-          <ul>
+          <ul class="background-gray2">
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> ER Test</li>
+            <li class="border-bottom green-text"><img src="images/p3icon_ertest_off.png" alt="" /></span> ER Test</li>
           </ul>
 
-          <ul>
+          <ul class="background-gray2">
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
+            <li class="border-bottom green-text"><img src="images/p3icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
           </ul>
-          <ul>
+          <ul class="background-green">
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_biopsy_over.png" alt="" /></span> OncoType DX Test</li>
+            <li class="border-bottom whitey"><img src="images/icon_biopsy_on.png" alt="" /></span> OncoType DX Test</li>
           </ul>
           <ul>
             <li><span></span></li>
