--- a/src/javascript/templates/patient3/patient3view11.hbs
+++ b/src/javascript/templates/patient3/patient3view11.hbs
@@ -9,18 +9,18 @@
           <li>Brittany Featherston</li>
         </ul>
         <div class="row next-steps p-2-steps">
-        <ul class="background-green">
+          <ul class="background-gray2">
             <li><span></span></li>
-            <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
+            <li class="border-bottom green-text"><span><img src="images/p3icon_biopsy_off.png" alt="" /></span>Biopsy</li>
           </ul>
-          <ul>
+          <ul class="background-gray2">
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> ER Test</li>
+            <li class="border-bottom green-text"><img src="images/p3icon_ertest_off.png" alt="" /></span> ER Test</li>
           </ul>
 
-          <ul>
+          <ul class="background-green">
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
+            <li class="border-bottom whitey"><img src="images/icon_her2test_on.png" alt="" /></span> HER2 FISH Test</li>
           </ul>
           <ul>
             <li><span></span></li>
@@ -68,7 +68,7 @@ Do you have enough information to make a recommendation for treatment or do you 
                  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
-                       <div class="modal-body">
+                       <div class="modal-body pat3">
 
                        <h2>You do not have enough information to select treatment for your patient. Please continue on to take the next test.</h2>
 
@@ -91,7 +91,7 @@ Do you have enough information to make a recommendation for treatment or do you 
    <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
    <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-body">
+      <div class="modal-body pat3">
       <h2><span class="pink-hl">That is correct</span>. Based on Brittany’s test results, you do not have enough information to make a treatment recommendation.</h2>
       </div>
       <div class="modal-footer background-nav-blue">
