--- a/src/javascript/templates/patient3/patient3view6.hbs
+++ b/src/javascript/templates/patient3/patient3view6.hbs
@@ -9,13 +9,13 @@
           <li>Brittany Featherston</li>
         </ul>
         <div class="row next-steps p-2-steps">
+          <ul class="background-gray2">
+            <li><span></span></li>
+            <li class="border-bottom green-text"><span><img src="images/p3icon_biopsy_off.png" alt="" /></span>Biopsy</li>
+          </ul>
           <ul class="background-green">
             <li><span></span></li>
-            <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
-          </ul>
-          <ul>
-            <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> ER Test</li>
+            <li class="border-bottom whitey"><img src="images/icon_ertest_on.png" alt="" /></span> ER Test</li>
           </ul>
 
           <ul>
@@ -62,7 +62,7 @@ The pathologist examined Brittany’s tissue and has provided a pathology report
 
         </ul>
 
-    
+
       <figure class="fig-fix">
         <img src="images/Discovery_ValSkinner_PathologyReports_2.jpg" alt="Pathology report shows detailed information about the patient’s tumor" />
       </figure>
