--- a/src/sass/_utilities.scss
+++ b/src/sass/_utilities.scss
@@ -85,6 +85,9 @@ background: linear-gradient(135deg, #1d5d7b 0%,#1d3063 100%); /* W3C, IE10+, FF1
 .number-gray {
   color: $number-gray;
 }
+.white {
+  color:white;
+}
 .spacer {
   height:8em;
 }
