--- a/src/javascript/templates/patient2/patient2view10.hbs
+++ b/src/javascript/templates/patient2/patient2view10.hbs
@@ -19,9 +19,9 @@
             <li class="border-bottom purple-text"><img src="images/icon_ertest_off.png" alt="" /></span> ER Test</li>
           </ul>
 
-          <ul>
+          <ul class="background-purple">
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
+            <li class="border-bottom"><img src="images/icon_her2test_on.png" alt="" /></span> HER2 FISH Test</li>
           </ul>
           <ul>
             <li><span></span></li>
