--- a/src/javascript/templates/patient2/patient2view4.hbs
+++ b/src/javascript/templates/patient2/patient2view4.hbs
@@ -9,7 +9,7 @@
           <li>Michele Johnson</li>
         </ul>
         <div class="row next-steps p-2-steps">
-        <ul class="background-gray2">
+          <ul class="background-purple">
             <li><span></span></li>
             <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
           </ul>
