--- a/src/javascript/templates/patient3/patient3view3.hbs
+++ b/src/javascript/templates/patient3/patient3view3.hbs
@@ -11,7 +11,7 @@
         <div class="row next-steps p-2-steps">
           <ul class="background-green">
             <li><span></span></li>
-            <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
+            <li class="border-bottom whitey"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
           </ul>
           <ul>
             <li><span></span></li>
