--- a/src/javascript/templates/patient2/patient2view3.hbs
+++ b/src/javascript/templates/patient2/patient2view3.hbs
@@ -68,23 +68,23 @@
          <path fill="#DD307B" class="size-1-active" d="M110.6,161.2c-14.2,0-25.7-11.5-25.7-25.7s11.5-25.7,25.7-25.7s25.7,11.5,25.7,25.7l0,0
          	C136.3,149.7,124.8,161.2,110.6,161.2z M110.6,113.6c-12.1,0-21.9,9.8-21.9,21.9c0,12.1,9.8,21.9,21.9,21.9
          	c12.1,0,21.9-9.8,21.9-21.9l0,0C132.5,123.4,122.7,113.6,110.6,113.6z"/>
-         <path fill="#DD307B" class=" size-1-active" d="M83.5,108.4l2.9,2.9c13.3-13.3,35-13.3,48.3,0s13.3,35,0,48.3l2.9,2.9c14.7-15.2,14.4-39.4-0.8-54.2
-         	C122,94,98.4,94,83.5,108.4z"/>
+         <!-- <path fill="#DD307B" class=" size-1-active" d="M83.5,108.4l2.9,2.9c13.3-13.3,35-13.3,48.3,0s13.3,35,0,48.3l2.9,2.9c14.7-15.2,14.4-39.4-0.8-54.2
+         	C122,94,98.4,94,83.5,108.4z"/> -->
          <path fill="#DD307B" class=" size-2-active" d="M232.8,155.9c-21.5,0-38.9-17.4-38.9-38.9c0-21.5,17.4-38.9,38.9-38.9s38.9,17.4,38.9,38.9l0,0
          	C271.7,138.4,254.3,155.9,232.8,155.9z M232.8,83.8c-18.3,0-33.2,14.8-33.2,33.2c0,18.3,14.8,33.2,33.2,33.2
          	c18.3,0,33.2-14.9,33.2-33.2l0,0C265.9,98.6,251.1,83.8,232.8,83.8z"/>
-         <path fill="#DD307B" class=" size-2-active" d="M191.8,75.9l4.4,4.4c20.2-20.2,53-20.2,73.2,0c20.2,20.2,20.2,53,0,73.2l4.4,4.4c22.3-23,21.8-59.7-1.2-82
-         	C250.1,54.1,214.3,54.1,191.8,75.9z"/>
+         <!-- <path fill="#DD307B" class=" size-2-active" d="M191.8,75.9l4.4,4.4c20.2-20.2,53-20.2,73.2,0c20.2,20.2,20.2,53,0,73.2l4.4,4.4c22.3-23,21.8-59.7-1.2-82
+         	C250.1,54.1,214.3,54.1,191.8,75.9z"/> -->
          <path fill="#DD307B" class=" size-3-active" d="M392.6,159.2c-28.4,0-51.3-23-51.3-51.3c0-28.4,23-51.3,51.3-51.3s51.3,23,51.3,51.3l0,0
          	C443.9,136.2,420.9,159.2,392.6,159.2z M392.6,64.2c-24.2,0-43.7,19.6-43.7,43.7c0,24.2,19.6,43.7,43.7,43.7
          	c24.2,0,43.7-19.6,43.7-43.7l0,0C436.3,83.7,416.8,64.2,392.6,64.2z"/>
-         <path fill="#DD307B" class=" size-3-active" d="M338.5,53.8l5.8,5.8c26.6-26.6,69.8-26.6,96.5,0s26.6,69.8,0,96.5l5.8,5.8c29.4-30.3,28.7-78.7-1.6-108.1
-         	C415.4,25,368.2,25,338.5,53.8z"/>
+         <!-- <path fill="#DD307B" class=" size-3-active" d="M338.5,53.8l5.8,5.8c26.6-26.6,69.8-26.6,96.5,0s26.6,69.8,0,96.5l5.8,5.8c29.4-30.3,28.7-78.7-1.6-108.1
+         	C415.4,25,368.2,25,338.5,53.8z"/> -->
          <path fill="#DD307B" class=" size-4-active" d="M590.3,153.4c-28.8,0-52.1-23.3-52.1-52.1c0-28.8,23.3-52.1,52.1-52.1c28.8,0,52.1,23.3,52.1,52.1l0,0
          	C642.3,130.1,619,153.4,590.3,153.4z M590.3,57c-24.5,0-44.4,19.9-44.4,44.4c0,24.5,19.9,44.4,44.4,44.4c24.5,0,44.4-19.9,44.4-44.4
          	l0,0C634.6,76.8,614.7,57,590.3,57z"/>
-         <path fill="#DD307B" class=" size-4-active" d="M535.4,46.5l5.9,5.9c27-27,70.8-27,97.9,0c27,27,27,70.8,0,97.9l5.9,5.9c29.8-30.7,29.1-79.8-1.7-109.7
-         	C613.4,17.3,565.5,17.3,535.4,46.5z"/>
+         <!-- <path fill="#DD307B" class=" size-4-active" d="M535.4,46.5l5.9,5.9c27-27,70.8-27,97.9,0c27,27,27,70.8,0,97.9l5.9,5.9c29.8-30.7,29.1-79.8-1.7-109.7
+         	C613.4,17.3,565.5,17.3,535.4,46.5z"/> -->
          <polygon fill="transparent" class="size-1" points="106.5,157.2 118.8,155.2 127,145.8 128.5,135 126,126.2 117.5,120.5 107.2,118.2 101,119.1 92.7,129.2
          	90.2,137.8 94.5,151.6 99,155.9 "/>
          <polygon fill="transparent" class="size-2" points="232.2,158.2 240,153.8 249.2,144 252.8,136.3 254.5,121.5 253.5,108.7 250.5,96.5 247.2,85.5
