--- a/src/javascript/templates/patient1/patient1View37-5.hbs
+++ b/src/javascript/templates/patient1/patient1View37-5.hbs
@@ -59,7 +59,7 @@ Check on Velma's progress.    </blockquote>
       <strong>As a result of hormonal therapy, Velma has not experienced a recurrence of breast cancer. Success!</strong>
 
  </p>
-<figure>  <img src="images/test_tubes_and_data_sheets.jpg" alt="cell biopsy slide 3" /></figure>
+<figure>  <img src="images/test_tubes_and_data_sheets.jpg" alt="Empty specimen tubes rest on a physician’s notebook" /></figure>
 
 
             <div class="row continue-container background-nav-blue butt-fix">
