fixed patient2view3 and patient3 view 3

--- a/src/javascript/templates/patient1/patient1View27.hbs
+++ b/src/javascript/templates/patient1/patient1View27.hbs
@@ -32,8 +32,8 @@
                     <li class="4th-step completed"><span class="dot completed"></span></li>
                     <li class="5th-step completed"><span class="dot completed"></span></li>
                     <li class="6th-step completed"><span class="dot completed"></span></li>
-                    <li class="7th-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
-                    <li class="8th-step "><span class="dot "></span></li>
+                    <li class="7th-step completed"><span class="dot completed"></span></li>
+                    <li class="8th-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
                     <li class="9th-step "><span class="dot "></span></li>
                     <li class="10th-step"><span class="dot"></span></li>
                     <li class="11th-step"><span class="dot"></span></li>
@@ -66,7 +66,7 @@ In this example, the ratio of red dots to green dots is 6:2, or 3.  This means t
 
 
             </div>
-      
+
             <div class="row continue-container background-nav-blue">
                 <div class="col-md-12 no-pad text-center">
                   <div class="col-md-4">
