Fixing progression sidenav on patient 1

--- a/src/javascript/templates/patient1/patient1View37.hbs
+++ b/src/javascript/templates/patient1/patient1View37.hbs
@@ -17,40 +17,33 @@
               </ul>
 
 
-            <div class="background-pink">
+
+              <ul class="complete-side">
+                <li><span class="number-gray">No. 03</span></li>
+                <li class="border-bottom pink-text">Molecular Testing</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+              </ul>
+
+<div class="background-pink">
               <ul>
-                <li><span class="white">No. 03</span></li>
-                <li class="border-bottom">Molecular Testing</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+                <li class="whitey"><span>No. 04</span></li>
+                <li class=" ">Recommendations</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
               </ul>
             </div>
-            <div class="row next-steps">
+              <div class="row next-steps">
 
-                <div class="row breadcrumb steps-13">
-                <ul class="ul-fix">
-                    <li class="1st-step completed"><span class="dot completed"></li>
-                    <li class="2nd-step completed"><span class="dot completed"></span></li>
-                    <li class="3rd-step completed"><span class="dot completed"></span></li>
-                    <li class="4th-step completed"><span class="dot completed"></span></li>
-                    <li class="5th-step completed"><span class="dot completed"></span></li>
-                    <li class="6th-step completed"><span class="dot completed"></span></li>
-                    <li class="7th-step active"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
-                    <li class="8th-step "><span class="dot "></span></li>
-                    <li class="9th-step "><span class="dot "></span></li>
-                    <li class="10th-step"><span class="dot"></span></li>
-                    <li class="11th-step"><span class="dot"></span></li>
-                    <li class="12th-step"><span class="dot"></span></li>
-                  </ul>
-                </div>
+                  <div class="row breadcrumb steps-6">
+                    <ul class="ul-fix">
+                        <li class="1st-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
+                        <li class="2nd-step "><span class="dot "></span></li>
+                        <li class="3rd-step "><span class="dot "></span></li>
+                        <li class="4th-step "><span class="dot "></span></li>
+                        <li class="5th-step "><span class="dot "></span></li>
+                        <li class="6th-step "><span class="dot "></span></li>
 
-                    <ul>
-                        <li>
-                            <span>No. 04</span>
-                        </li>
-                        <li>Recommendations</li>
-                        <!-- TODO - MAKE THIS TIED TO COLLECTION -->
-                    </ul>
-                </div>
-            </nav>
+                      </ul>
+                  </div>
+            </div>
+          </nav>
 
         </div>
     </div>
