--- a/src/javascript/templates/patient1/patient1View30.hbs
+++ b/src/javascript/templates/patient1/patient1View30.hbs
@@ -35,9 +35,9 @@
                       <li class="7th-step completed"><span class="dot completed"></span></li>
                       <li class="8th-step completed"><span class="dot completed"></span></li>
                       <li class="9th-step completed"><span class="dot completed"></span></li>
-                      <li class="10th-step completed"><span class="dot completed"><span class="dot active pulse"></span></li>
-                      <li class="11th-ste active"><span class="dot"></span></li>
-                      <li class="12th-step"><span class="dot"></span></li>
+                      <li class="10th-step completed"><span class="dot completed"></span></li>
+                      <li class="11th-ste completed"><span class="dot completed"></span></li>
+                      <li class="12th-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
                     </ul>
                 </div>
               <ul>
