--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1037,7 +1037,7 @@ display: none;
           }
           &.completed {
             &:after {
-              background-color: $pink;
+              background-color: $pink!important;
             }
           }
           &.active {
@@ -1466,6 +1466,10 @@ iframe {
 }
 .steps-13 {
   height: 338px!important;
+  border-left: 40px solid #DAE5EA !important;
+}
+.steps-6 {
+  height: 194px!important;
   border-left: 40px solid #DAE5EA !important;
 }
 
