--- a/src/javascript/templates/patient1/patient1View37-5.hbs
+++ b/src/javascript/templates/patient1/patient1View37-5.hbs
@@ -32,11 +32,11 @@
 
                   <div class="row breadcrumb steps-6">
                     <ul class="ul-fix">
-                        <li class="1st-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
-                        <li class="2nd-step "><span class="dot "></span></li>
-                        <li class="3rd-step "><span class="dot "></span></li>
-                        <li class="4th-step "><span class="dot "></span></li>
-                        <li class="5th-step "><span class="dot "></span></li>
+                        <li class="1st-step completed"><span class="dot completed"></span></li>
+                        <li class="2nd-step completed"><span class="dot completed"></span></li>
+                        <li class="3rd-step completed"><span class="dot completed"></span></li>
+                        <li class="4th-step completed"><span class="dot completed"></span></li>
+                        <li class="5th-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
                         <li class="6th-step "><span class="dot "></span></li>
 
                       </ul>
