fixed patient-nav images showing up big in ie11

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -65,6 +65,7 @@ path {
           margin-right: 10px;
           opacity: 0.5;
           margin-left:5px;
+          max-width: 30px!important;
         }
         .border-bottom {
           border-bottom: 2px solid $white;
