--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -48,7 +48,9 @@ body {
 path {
   cursor: pointer;
 }
-
+.pt-1,.pt-3,.pt-3 {
+  display: inline-block;
+}
 .top-nav {
   background-color: $dark-blue;
   color: white;
@@ -58,7 +60,7 @@ path {
     top: 4px;
     ul {
       li {
-        display: inline;
+        display: inline-block;
         font-size: 12px;
         img {
           border-radius: 150px;
