--- a/src/javascript/templates/patient1/patient1View4.hbs
+++ b/src/javascript/templates/patient1/patient1View4.hbs
@@ -48,7 +48,7 @@
         <div class="svg-text">Click the area that shows an abnormality.</div>
 
       <?xml version="1.0" encoding="utf-8"?>
-<svg style="cursor:pointer;" version="1.1" id="mammo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg height="810px" style="cursor:pointer;" version="1.1" id="mammo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 810 810" style="enable-background:new 0 0 810 810;" xml:space="preserve" preserveAspectRatio="xMidYMin slice">
 <style type="text/css">
 	.st0{opacity:0.35;}
