--- a/src/javascript/templates/patient3/patient3view2.hbs
+++ b/src/javascript/templates/patient3/patient3view2.hbs
@@ -81,8 +81,8 @@ Be sure to record the information in your Lab Handbook.
       <?xml version="1.0" encoding="utf-8"?>
 
 
-      <svg style="cursor:pointer;" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 810 810" style="enable-background:new 0 0 810 810;" xml:space="preserve">
+      <svg height="810px" style="cursor:pointer;" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+       viewBox="0 0 810 810" style="enable-background:new 0 0 810 810;" xml:space="preserve" preserveAspectRatio="xMidYMin slice">
       <style type="text/css">
         .st0{opacity:0.35;}
         .st1{fill:#FFFFFF;}
