--- a/src/javascript/templates/patient1/patient1View13-5.hbs
+++ b/src/javascript/templates/patient1/patient1View13-5.hbs
@@ -27,8 +27,8 @@
                                 <li class="fourth-step completed"><span class="dot completed"></span></li>
                                 <li class="fifth-step completed"><span class="dot completed"></span></li>
                                 <li class="6th-step completed"><span class="dot completed"></span></li>
-                                <li class="7th-step completed"><span class="dot active"></span><span class="dot active pulse"></span></li>
-                                <li class="8th-step"><span class="dot"></span></li>
+                                <li class="7th-step completed"><span class="dot completed"></span></li>
+                                <li class="8th-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
 
                               </ul>
                             </div>
