--- a/src/javascript/templates/patient1/patient1View16-5.hbs
+++ b/src/javascript/templates/patient1/patient1View16-5.hbs
@@ -28,8 +28,8 @@
                           <ul class="ul-fix">
                             <li class="1st-step completed"><span class="dot completed"></li>
                             <li class="2nd-step completed"><span class="dot completed"></span></li>
-                            <li class="3rd-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
-                            <li class="4th-step "><span class="dot "></span></li>
+                            <li class="3rd-step completed"><span class="dot completed"></span></li>
+                            <li class="4th-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
                             <li class="5th-step"><span class="dot"></span></li>
                             <li class="6th-step "><span class="dot"></span></li>
                             <li class="7th-step "><span class="dot "></span></li>
