--- a/src/javascript/templates/patient1/patient1View33-5.hbs
+++ b/src/javascript/templates/patient1/patient1View33-5.hbs
@@ -16,33 +16,41 @@
               </ul>
 
 
-
-              <ul class="complete-side">
-                <li><span class="number-gray">No. 03</span></li>
-                <li class="border-bottom pink-text">Molecular Testing</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
-              </ul>
-
-<div class="background-pink">
+            <div class="background-pink">
               <ul>
-                <li class="whitey"><span>No. 04</span></li>
-                <li class=" ">Recommendations</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+                <li><span class="white">No. 03</span></li>
+                <li class="border-bottom">Molecular Testing</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
               </ul>
             </div>
-              <div class="row next-steps">
+            <div class="row next-steps">
 
-                  <div class="row breadcrumb steps-6">
-                    <ul class="ul-fix">
-                        <li class="1st-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
-                        <li class="2nd-step "><span class="dot "></span></li>
-                        <li class="3rd-step "><span class="dot "></span></li>
-                        <li class="4th-step "><span class="dot "></span></li>
-                        <li class="5th-step "><span class="dot "></span></li>
-                        <li class="6th-step "><span class="dot "></span></li>
+                <div class="row breadcrumb steps-13">
+                  <ul class="ul-fix">
+                      <li class="1st-step completed"><span class="dot completed"></li>
+                      <li class="2nd-step completed"><span class="dot completed"></span></li>
+                      <li class="3rd-step completed"><span class="dot completed"></span></li>
+                      <li class="4th-step completed"><span class="dot completed"></span></li>
+                      <li class="5th-step completed"><span class="dot completed"></span></li>
+                      <li class="6th-step completed"><span class="dot completed"></span></li>
+                      <li class="7th-step completed"><span class="dot completed"></span></li>
+                      <li class="8th-step completed"><span class="dot completed"></span></li>
+                      <li class="9th-step completed"><span class="dot completed"></span></li>
+                      <li class="10th-step completed"><span class="dot completed"></span></li>
+                      <li class="11th-ste completed"><span class="dot completed"></span></li>
+                      <li class="12th-step completed"><span class="dot completed"></span></li>
+                      <li class="13th-ste completed"><span class="dot completed"></span></li>
+                      <li class="14th-ste completed"><span class="dot active "></span><span class="dot active pulse"></span></li>
+                    </ul>
 
-                      </ul>
-                  </div>
+                </div>
+              <ul>
+                <li><span>No. 04</span></li>
+                <li>Recommendations</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+              </ul>
             </div>
           </nav>
+
+
 
         </div>
     </div>
