--- a/src/javascript/templates/patient1/patient1View19-3.hbs
+++ b/src/javascript/templates/patient1/patient1View19-3.hbs
@@ -38,6 +38,8 @@
                             <li class="10th-step"><span class="dot"></span></li>
                             <li class="11th-step"><span class="dot"></span></li>
                             <li class="12th-step"><span class="dot"></span></li>
+                            <li class="13th-ste "><span class="dot "></span></li>
+                            <li class="14th-ste "><span class="dot "></span></li>
                           </ul>
                         </div>
                       <ul>
