--- a/src/javascript/templates/patient1/patient1View20.hbs
+++ b/src/javascript/templates/patient1/patient1View20.hbs
@@ -33,12 +33,14 @@
                   <li class="4th-step completed"><span class="dot completed"></span></li>
                   <li class="5th-step completed"><span class="dot completed"></span></li>
                   <li class="6th-step completed"><span class="dot completed"></span></li>
-                  <li class="7th-step completed"><span class="dot completed"></span></li>
-                  <li class="8th-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
+                  <li class="7th-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
+                  <li class="8th-step "><span class="dot "></span></li>
                   <li class="9th-step "><span class="dot "></span></li>
                   <li class="10th-step"><span class="dot"></span></li>
                   <li class="11th-step"><span class="dot"></span></li>
                   <li class="12th-step"><span class="dot"></span></li>
+                  <li class="13th-ste "><span class="dot "></span></li>
+                  <li class="14th-ste "><span class="dot "></span></li>
                 </ul>
             </div>
           <ul>
