--- a/src/javascript/templates/patient1/patient1View37.hbs
+++ b/src/javascript/templates/patient1/patient1View37.hbs
@@ -36,8 +36,8 @@
                         <li class="1st-step completed"><span class="dot completed"></span></li>
                         <li class="2nd-step completed"><span class="dot completed"></span></li>
                         <li class="3rd-step completed"><span class="dot completed"></span></li>
-                        <li class="4th-step completed"><span class="dot completed"></span></li>
-                        <li class="5th-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
+                        <li class="4th-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
+                        <li class="5th-step "><span class="dot "></span></li>
                         <li class="6th-step "><span class="dot "></span></li>
 
                       </ul>
