fixed paitent 1side nav

--- a/src/javascript/templates/patient1/patient1View16-5.hbs
+++ b/src/javascript/templates/patient1/patient1View16-5.hbs
@@ -40,6 +40,8 @@
                             <li class="12th-step"><span class="dot"></span></li>
                             <li class="13th-ste "><span class="dot "></span></li>
                             <li class="14th-ste "><span class="dot "></span></li>
+                            <li class="15th-ste "><span class="dot "></span></li>
+
                           </ul>
                         </div>
                       <ul>
