--- a/src/javascript/templates/patient1/patient1View19-3.hbs
+++ b/src/javascript/templates/patient1/patient1View19-3.hbs
@@ -26,21 +26,23 @@
 
                         <div class="row breadcrumb steps-13">
                           <ul class="ul-fix">
-                            <li class="1st-step completed"><span class="dot completed"></li>
-                            <li class="2nd-step completed"><span class="dot completed"></span></li>
-                            <li class="3rd-step completed"><span class="dot completed"></span></li>
-                            <li class="4th-step completed"><span class="dot completed"></span></li>
-                            <li class="5th-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
-                            <li class="6th-step "><span class="dot"></span></li>
-                            <li class="7th-step "><span class="dot "></span></li>
-                            <li class="8th-step "><span class="dot "></span></li>
-                            <li class="9th-step "><span class="dot "></span></li>
-                            <li class="10th-step"><span class="dot"></span></li>
-                            <li class="11th-step"><span class="dot"></span></li>
-                            <li class="12th-step"><span class="dot"></span></li>
-                            <li class="13th-ste "><span class="dot "></span></li>
-                            <li class="14th-ste "><span class="dot "></span></li>
-                          </ul>
+                              <li class="1st-step completed"><span class="dot completed"></li>
+                              <li class="2nd-step completed"><span class="dot completed"></span></li>
+                              <li class="3rd-step completed"><span class="dot completed"></span></li>
+                              <li class="4th-step completed"><span class="dot completed"></span></li>
+                              <li class="5th-step completed"><span class="dot completed"></span></li>
+                              <li class="6th-step completed"><span class="dot active"></span><span class="dot active pulse"></span></li>
+                              <li class="7th-step "><span class="dot "></span></li>
+                              <li class="8th-step "><span class="dot "></span></li>
+                              <li class="9th-step "><span class="dot "></span></li>
+                              <li class="10th-step"><span class="dot"></span></li>
+                              <li class="11th-step"><span class="dot"></span></li>
+                              <li class="12th-step"><span class="dot"></span></li>
+                              <li class="13th-ste "><span class="dot "></span></li>
+                              <li class="14th-ste "><span class="dot "></span></li>
+                              <li class="15th-ste "><span class="dot "></span></li>
+
+                            </ul>
                         </div>
                       <ul>
                         <li><span>No. 04</span></li>
@@ -107,7 +109,7 @@ Velma’s doctors have sent her tissue sample for ER testing.   </blockquote>
           <div class="row continue-container background-nav-blue">
               <div class="col-md-12 no-pad text-center">
                 <div class="col-md-4">
-                  <a data-navigate="patient1view15" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
+                  <a data-navigate="patient1view19" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                 </div>
                 <div class="col-md-4 line-across">
 
