--- a/src/javascript/templates/patient1/patient1View27.hbs
+++ b/src/javascript/templates/patient1/patient1View27.hbs
@@ -35,11 +35,13 @@
                       <li class="7th-step completed"><span class="dot completed"></span></li>
                       <li class="8th-step completed"><span class="dot completed"></span></li>
                       <li class="9th-step completed"><span class="dot completed"></span></li>
-                      <li class="10th-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
-                      <li class="11th-step"><span class="dot"></span></li>
+                      <li class="10th-step completed"><span class="dot completed"></span></li>
+                      <li class="11th-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
                       <li class="12th-step"><span class="dot"></span></li>
                       <li class="13th-ste "><span class="dot "></span></li>
                       <li class="14th-ste "><span class="dot "></span></li>
+                      <li class="15th-ste "><span class="dot "></span></li>
+
                     </ul>
                 </div>
               <ul>
