--- a/src/javascript/templates/patient1/patient1View30.hbs
+++ b/src/javascript/templates/patient1/patient1View30.hbs
@@ -37,9 +37,10 @@
                       <li class="9th-step completed"><span class="dot completed"></span></li>
                       <li class="10th-step completed"><span class="dot completed"></span></li>
                       <li class="11th-ste completed"><span class="dot completed"></span></li>
-                      <li class="12th-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
-                      <li class="13th-ste "><span class="dot "></span></li>
-                      <li class="14th-ste "><span class="dot "></span></li>
+                      <li class="12th-step completed"><span class="dot completed"></span></li>
+                      <li class="13th-ste completed"><span class="dot completed"></span></li>
+                      <li class="14th-ste completed"><span class="dot active"></span><span class="dot active pulse"></span></li>
+                      <li class="15th-ste "><span class="dot "></span></li>
                     </ul>
                 </div>
               <ul>
