--- a/src/javascript/templates/patient1/patient1View31.hbs
+++ b/src/javascript/templates/patient1/patient1View31.hbs
@@ -38,8 +38,9 @@
                       <li class="10th-step completed"><span class="dot completed"></span></li>
                       <li class="11th-ste completed"><span class="dot completed"></span></li>
                       <li class="12th-step completed"><span class="dot completed"></span></li>
-                      <li class="13th-ste active"><span class="dot active"></span><span class="dot active pulse"></span></li>
-                      <li class="14th-ste "><span class="dot "></span></li>
+                      <li class="13th-ste completed"><span class="dot completed"></span></li>
+                      <li class="14th-ste completed"><span class="dot completed"></span></li>
+                      <li class="15th-ste completed"><span class="dot active"></span><span class="dot active pulse"></span></li>
                     </ul>
                 </div>
               <ul>
