--- a/src/javascript/templates/patient1/patient1View33-5.hbs
+++ b/src/javascript/templates/patient1/patient1View33-5.hbs
@@ -39,7 +39,8 @@
                       <li class="11th-ste completed"><span class="dot completed"></span></li>
                       <li class="12th-step completed"><span class="dot completed"></span></li>
                       <li class="13th-ste completed"><span class="dot completed"></span></li>
-                      <li class="14th-ste completed"><span class="dot active "></span><span class="dot active pulse"></span></li>
+                      <li class="14th-ste completed"><span class="dot completed"></span></li>
+                      <li class="15th-ste completed"><span class="dot active"></span><span class="dot active pulse"></span></li>
                     </ul>
 
                 </div>
