fixed small copy

--- a/src/javascript/templates/patient1/patient1View36.hbs
+++ b/src/javascript/templates/patient1/patient1View36.hbs
@@ -48,7 +48,7 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-Putting it All Together: The OncoType DX® Test       </blockquote>
+Putting It All Together: The OncoType DX® Test       </blockquote>
         <main id="content-main" class="row patient-1">
 
 
