--- a/src/javascript/templates/patient1/patient1View34.hbs
+++ b/src/javascript/templates/patient1/patient1View34.hbs
@@ -48,7 +48,7 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-Putting it All Together: The Estrogen Receptor (ER) Test
+Putting It All Together: The Estrogen Receptor (ER) Test
        </blockquote>
         <main id="content-main" class="row patient-1">
                     <p>
