fixed pushing enter on typeform quiz pages

--- a/src/javascript/templates/patient1/patient1View13-5.hbs
+++ b/src/javascript/templates/patient1/patient1View13-5.hbs
@@ -57,7 +57,7 @@
                         <p class="pad50">
                           Take this quiz to refresh what you have learned and that will help you with this lesson.
                         </p>
-                        <iframe id="my_typeform" src="https://discoverycep.typeform.com/to/qYJgkV" frameBorder="0">
+                        <iframe id="my_typeform" src="https://discoverycep.typeform.com/to/qYJgkV" frameBorder="0" onload="this.contentWindow.focus()">
 
                         </iframe>
                         <!-- <a class="previous" href="/patient1view13" data-navigate="patient1view13"><button class="" type="button" name="button">&#8592; Previous</button></a>
