--- a/src/javascript/templates/patient1/patient1View38.hbs
+++ b/src/javascript/templates/patient1/patient1View38.hbs
@@ -55,12 +55,12 @@
                       Let's review.
                   </blockquote>
                     <main id="content-main" class="row patient-1 svg-test">
-
+  
                       <p class="pad50">
                         Take this quiz after you have completed the interactive to demonstrate your understanding.
 
                       </p>
-                        <iframe id="my_typeform" src="https://discoverycep.typeform.com/to/OPqTSw" frameBorder="0">
+                        <iframe id="my_typeform2" src="http://discoverycep.typeform.com/to/OPqTSw" frameBorder="0" onload="this.contentWindow.focus()">
 
                         </iframe>
                         <!-- <a class="previous" href="/patient1view37" data-navigate="patient1view37"><button class="" type="button" name="button">&#8592; Previous</button></a> -->
