fixed large icons on patient2 and 3

--- a/src/javascript/templates/patient3/patient3view12.hbs
+++ b/src/javascript/templates/patient3/patient3view12.hbs
@@ -33,7 +33,7 @@
           </ul>
           <ul>
             <li><span></span></li>
-            <li class=""><img src="images/icon_treatment_over.png" alt="" /></span> Treatment</li>
+            <li class="small-icon"><img src="images/icon_treatment_over.png" alt="" /></span> Treatment</li>
           </ul>
         </div>
       </nav>
