--- a/src/javascript/templates/patient3/patient3view15.hbs
+++ b/src/javascript/templates/patient3/patient3view15.hbs
@@ -28,7 +28,7 @@
           </ul>
           <ul class="background-green">
             <li><span></span></li>
-            <li class="whitey"><img src="images/icon_treatment_on.png" alt="" /></span> Treatment</li>
+            <li class="whitey small-icon"><img src="images/icon_treatment_on.png" alt="" /></span> Treatment</li>
           </ul>
         </div>
       </nav>
