--- a/src/javascript/templates/patient2/patient2view12.hbs
+++ b/src/javascript/templates/patient2/patient2view12.hbs
@@ -28,7 +28,7 @@
           </ul>
           <ul class="background-purple">
             <li><span></span></li>
-            <li class=""><img src="images/icon_treatment_on.png" alt="" /></span> Treatment</li>
+            <li class="small-icon"><img src="images/icon_treatment_on.png" alt="" /></span> Treatment</li>
           </ul>
         </div>
       </nav>
