--- a/src/javascript/templates/patient3/patient3View14.hbs
+++ b/src/javascript/templates/patient3/patient3View14.hbs
@@ -28,7 +28,7 @@
           </ul>
           <ul>
             <li><span></span></li>
-            <li class=""><img src="images/icon_treatment_over.png" alt="" /></span> Treatment</li>
+            <li class="small-icon"><img src="images/icon_treatment_over.png" alt="" /></span> Treatment</li>
           </ul>
         </div>
       </nav>
@@ -130,7 +130,7 @@ Click below to make your selection for next steps. </p>
           </ul>
           <ul>
             <li><span></span></li>
-            <li class=""><img src="images/icon_treatment_over.png" alt="" /></span> Treatment</li>
+            <li class="small-icon"><img src="images/icon_treatment_over.png" alt="" /></span> Treatment</li>
           </ul>
         </div>
       </nav>
