disabled continue button for typeform testing?

--- a/src/javascript/templates/patient1/patient1View13-5.hbs
+++ b/src/javascript/templates/patient1/patient1View13-5.hbs
@@ -66,7 +66,7 @@
 
                         <div class="row continue-container  ">
                             <div class="col-md-12 no-pad text-center">
-                              <a data-navigate="patient1view14" class="continue background-nav-blue intro-fix"><button type="button" class="line-before" name="button">Continue</button></a>
+                              <a style="pointer-events:none;" data-navigate="patient1view14" class="continue background-nav-blue intro-fix"><button style="color:#567996;pointer-events:none;" type="button muted" class="line-before" name="button">Continue</button></a>
                             </div>
                         </div>
 
