--- a/src/javascript/templates/patient1/patient1View38.hbs
+++ b/src/javascript/templates/patient1/patient1View38.hbs
@@ -55,7 +55,7 @@
                       Let's review.
                   </blockquote>
                     <main id="content-main" class="row patient-1 svg-test">
-  
+
                       <p class="pad50">
                         Take this quiz after you have completed the interactive to demonstrate your understanding.
 
@@ -68,7 +68,7 @@
                         <!-- <a href="/startview2" data-navigate="startview2" class="continue"><button id="next-page" type="button"  name="button">Next &#8594;</button></a> -->
                         <div class="row continue-container  ">
                             <div class="col-md-12 no-pad text-center">
-                              <a data-navigate="startview2" class="continue background-nav-blue intro-fix"><button type="button" class="line-before" name="button">Continue</button></a>
+                              <a style="pointer-events:none;" data-navigate="startview2" class="continue background-nav-blue intro-fix"><button style="color:#567996;pointer-events:none;" type="button muted" class="line-before" name="button">Continue</button></a>
                             </div>
                         </div>
 
